main/default/objects/Flow_Callout_Config__mdt/Flow_Callout_Config__mdt.object-meta.xml
<CustomObject>
    <label>Flow Callout Config</label>
    <pluralLabel>Flow Callout Configs</pluralLabel>
</CustomObject>