main/default/objects/Flow_Callout_Config__mdt/fields/Callout_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Callout_Endpoint__c</fullName>
    <label>Callout Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>