main/default/objects/Flow_Callout_Config__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <inlineHelpText>Comma separated field api names to be sent to the Callout</inlineHelpText>
    <label>Fields</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>