main/default/objects/Flow_Callout_Config__mdt/fields/Filter_Object__c.field-meta.xml
<CustomField>
    <fullName>Filter_Object__c</fullName>
    <label>Filter Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Flow_Callout_Configs1</relationshipLabel>
    <relationshipName>Flow_Callout_Configs1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>