main/default/objects/Flow_Callout_Config__mdt/fields/Filter_Object_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Object_Condition__c</fullName>
    <label>Filter Object Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>