main/default/objects/Flow_Callout_Config__mdt/fields/Filter_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Object_Field__c</fullName>
    <label>Filter Object Field</label>
    <metadataRelationshipControllingField>Flow_Callout_Config__mdt.Filter_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Flow_Callout_Configs</relationshipLabel>
    <relationshipName>Flow_Callout_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>