main/default/objects/Flow_Callout_Config__mdt/fields/Object_Field_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_Qualifier__c</fullName>
    <label>Object Field Qualifier</label>
    <metadataRelationshipControllingField>Flow_Callout_Config__mdt.Object_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Flow_Callout_Configs1</relationshipLabel>
    <relationshipName>Flow_Callout_Configs1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>