main/default/objects/Flow_Callout_Config__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Flow_Callout_Configs</relationshipLabel>
    <relationshipName>Flow_Callout_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>