main/default/objects/Flow_Callout_Config__mdt/validationRules/MutuallyExclusiveFilterObjectAndField.validationRule-meta.xml
<ValidationRule>
    <fullName>MutuallyExclusiveFilterObjectAndField</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Filter_Object__c) &amp;&amp; !ISBLANK(Filter_Object_Field__c)) || (!ISBLANK(Filter_Object__c) &amp;&amp; ISBLANK(Filter_Object_Field__c))</errorConditionFormula>
    <errorMessage>Filter Object and Filter Field is mutually Exclusive</errorMessage>
</ValidationRule>