main/default/objects/Flow_Callout_Config__mdt/validationRules/MutuallyExclusiveQualifierAndCondition.validationRule-meta.xml
<ValidationRule>
    <fullName>MutuallyExclusiveQualifierAndCondition</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Object_Field_Qualifier__c) &amp;&amp; !ISBLANK(Filter_Object_Condition__c)) || (!ISBLANK(Object_Field_Qualifier__c) &amp;&amp; ISBLANK(Filter_Object_Condition__c))</errorConditionFormula>
    <errorMessage>Object Field Qualifier and Filter Object Condition is mutually exclusive</errorMessage>
</ValidationRule>